--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss": "^8.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-toastify": "^6.2.0",
     "tailwindcss": "^2.0.2"
   }
 }
