--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-toastify": "^6.2.0",
+    "react-transition-group": "^4.4.1",
     "tailwindcss": "^2.0.2"
   }
 }
