Resolve icons for landing page

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^0.16.0",
     "@supabase/supabase-js": "^1.1.2",
     "@supabase/ui": "^0.1.10",
     "autoprefixer": "^10.1.0",
