--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/supabase-js": "^1.1.2",
     "@supabase/ui": "^0.1.15",
     "autoprefixer": "^10.1.0",
+    "crypto-js": "^4.0.0",
     "next": "10.0.3",
     "postcss": "^8.2.1",
     "react": "17.0.1",
